Settings: dark mode added

--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -36,9 +36,18 @@
 .Form > .calcButtonWrapper > .calcButton {
   width: 60px;
   height: 60px;
-  background: #027 url(/src/icons/logo.svg) no-repeat center/24px auto;
+  background: #027 url(/src/icons/logo_fff.svg) no-repeat center/24px auto;
   border-radius: 50%;
   -webkit-transition: all 100ms ease-in-out;
   transition: all 100ms ease-in-out;
+}
+
+.darkMode .Form > .calcButtonWrapper {
+  -webkit-box-shadow: 3px 4px 20px #030303;
+          box-shadow: 3px 4px 20px #030303;
+}
+
+.darkMode .Form > .calcButtonWrapper > .calcButton {
+  background-color: #27d;
 }
 /*# sourceMappingURL=Form.css.map */
