--- a/src/components/Settings/Settings.scss
+++ b/src/components/Settings/Settings.scss
@@ -1,4 +1,3 @@
-@import '../../stylesheets/mixin';
 @import '../../stylesheets/classes';
 
 .Settings{
@@ -19,8 +18,9 @@
         position: absolute;
         left: 50%;
         bottom: -100%;
-        @include transform(-50%, 0);
-        @include borderTopRadius(17px);
+        transform: translate(-50%, 0);
+        border-top-left-radius: 17px;
+        border-top-right-radius: 17px;
         background-color: white;
         transition: bottom 0.2s ease;
         > .closeButton{
@@ -29,9 +29,9 @@
             position: absolute;
             top: 15px;
             right: 15px;
-            background: transparent url(/src/icons/down_111.svg) no-repeat center / 22px auto;
-            @include borderRadius(50%);
-            @extend .transBackActEffect;
+            background: white url(/src/icons/down_111.svg) no-repeat center / 22px auto;
+            border-radius: 50%;
+            @extend .lightTransparentBackground;
         }
         > .containerWrapper{
             width: 100%;
@@ -43,7 +43,7 @@
             position: absolute;
             left: 49%;
             top: 50%;
-            @include transform(-50%, -50%);
+            transform: translate(-50%, -50%);
             display: flex;
             flex-direction: row;
             justify-content: space-between;
@@ -71,7 +71,8 @@
             }
             > .about{
                 *{
-                    @extend .selectableText;
+                    user-select: text;
+                    cursor: text;
                 }
                 > #prices{
                     flex: 1;
@@ -135,7 +136,6 @@
             > .closeButton{
                 top: 20px;
                 right: 20px;
-                background-color: white;
                 z-index: 10;
             }
             > .containerWrapper{
@@ -143,13 +143,49 @@
                 padding: 0 25px 40px 25px;
                 left: 0;
                 top: 25px;
-                @include transform(0, 0);
+                transform: translate(0, 0);
                 flex-direction: column;
                 justify-content: start;
                 gap: 25px;
                 > .container{
                     width: 100%;
                     max-width: unset;
+                }
+            }
+        }
+    }
+}
+
+//dark mode:
+.darkMode{
+    .Settings{
+        > .window{
+            background-color: #012;
+            > .closeButton{
+                background-color: #012;
+                background-image: url(/src/icons/down_fff.svg);
+            }
+            > .containerWrapper{
+                color: #ddd;
+                > .container{
+                    > .title{
+                        color: #cfcfcf;
+                    }
+                }
+                > .settings{
+                    > .section{
+                        > .name{
+                            color: #888;
+                        }
+                    }
+                }
+                > .about{
+                    > .sectionTitle{
+                        color: #888;
+                    }
+                    .link{
+                        color: #5ad;
+                    }
                 }
             }
         }
