style: tap blue background on mobile removed

--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -130,6 +130,7 @@ body > #root {
 }
 
 body * {
+  -webkit-tap-highlight-color: transparent;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
