--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -21,6 +21,7 @@ body{
         height: 100%;
     }
     *{
+        -webkit-tap-highlight-color: transparent;
         box-sizing: border-box;
     }
     a, p, input, button, select{
