--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: flex-start;
     overflow: auto;
+    transition: background-color 200ms ease-in-out;
     > .window{
         width: 100%;
         max-width: 1500px;
@@ -35,7 +36,8 @@
             transition:
                 200ms width 150ms ease-in-out,
                 200ms height 150ms ease-in-out,
-                200ms padding 150ms ease-in-out;
+                200ms padding 150ms ease-in-out,
+                background-color 200ms ease-in-out;
             .Header{
                 justify-content: end;
                 .appNameWrapper{
