--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -21,12 +21,13 @@
         bottom: 3%;
         z-index: 1;
         display: none;
+        transition: box-shadow 200ms ease-in-out;
         > .calcButton{
             width: 60px;
             height: 60px;
             background: #027 url(/src/icons/logo_fff.svg) no-repeat center / 24px auto;
             border-radius: 50%;
-            transition: all 100ms ease-in-out;
+            transition: all 200ms ease-in-out;
         }
     }
 }
