--- a/src/components/Info/Info.scss
+++ b/src/components/Info/Info.scss
@@ -8,6 +8,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: background-color 200ms ease-in-out, box-shadow 200ms ease-in-out;
     > .container{
         width: 100%;
         max-width: 470px;
