--- a/src/components/RangeInput/RangeInput.scss
+++ b/src/components/RangeInput/RangeInput.scss
@@ -222,6 +222,7 @@
     border-bottom: solid 5px white;
     margin-top: -1px;
     margin-bottom: -1px;
+    transition: all 200ms ease-in-out;
 }
 .customRange_light::-moz-range-track{
     width: 100%;
@@ -230,6 +231,7 @@
     background: transparent;
     border-top: solid 8px white;
     border-bottom: solid 8px white;
+    transition: all 200ms ease-in-out;
 }
 .customRange_light::-ms-track{
     width: 100%;
@@ -240,6 +242,7 @@
     border-bottom: solid 5px white;
     border-color: transparent;
     color: transparent;
+    transition: all 200ms ease-in-out;
 }
 .customRange_light::-ms-fill-lower{
     width: 100%;
@@ -248,6 +251,7 @@
     background: transparent;
     border-top: solid 5px white;
     border-bottom: solid 5px white;
+    transition: all 200ms ease-in-out;
 }
 .customRange_light::-ms-fill-upper{
     width: 100%;
@@ -256,6 +260,7 @@
     background: transparent;
     border-top: solid 5px white;
     border-bottom: solid 5px white;
+    transition: all 200ms ease-in-out;
 }
 
 //customRange_dark:
