--- a/src/components/SelectInput/SelectInput.css
+++ b/src/components/SelectInput/SelectInput.css
@@ -57,7 +57,7 @@
     custom scrollbar
 */
 .thinScrollbar_light::-webkit-scrollbar, .thinScrollbar_dark::-webkit-scrollbar, .darkMode.notTouchScreen::-webkit-scrollbar, .darkMode.notTouchScreen ::-webkit-scrollbar, .notTouchScreen::-webkit-scrollbar, .notTouchScreen ::-webkit-scrollbar {
-  width: 7px;
+  width: 6px;
   height: 4px;
 }
 
@@ -68,11 +68,6 @@
 .thinScrollbar_light::-webkit-scrollbar-thumb, .thinScrollbar_dark::-webkit-scrollbar-thumb, .darkMode.notTouchScreen::-webkit-scrollbar-thumb, .darkMode.notTouchScreen ::-webkit-scrollbar-thumb, .notTouchScreen::-webkit-scrollbar-thumb, .notTouchScreen ::-webkit-scrollbar-thumb {
   background: #c4c4c4;
   border-radius: 20px;
-}
-
-.thinScrollbar_dark::-webkit-scrollbar, .darkMode.notTouchScreen::-webkit-scrollbar, .darkMode.notTouchScreen ::-webkit-scrollbar {
-  width: 6px;
-  height: 4px;
 }
 
 .thinScrollbar_dark::-webkit-scrollbar-thumb, .darkMode.notTouchScreen::-webkit-scrollbar-thumb, .darkMode.notTouchScreen ::-webkit-scrollbar-thumb {
@@ -123,6 +118,8 @@
 .SelectInput > div > .selectWrapper {
   background-color: #f5f5f5;
   border-radius: 7px;
+  -webkit-transition: background-color 200ms ease-in-out;
+  transition: background-color 200ms ease-in-out;
 }
 
 .SelectInput > div > .selectWrapper > .select {
@@ -139,6 +136,8 @@
   font-size: 2.8rem;
   color: #027;
   border-radius: 7px;
+  -webkit-transition: background-color 200ms ease-in-out;
+  transition: background-color 200ms ease-in-out;
 }
 
 .SelectInput > div > .comment {
@@ -175,7 +174,7 @@
 
 .SelectInput.inline > div > .selectWrapper {
   float: left;
-  background-color: transparent;
+  background-color: white;
 }
 
 .SelectInput.inline > div > .selectWrapper > .select {
